--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -28,39 +28,33 @@
   </nav>
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-      <div class="banner" name="about-header">
+      <div class="banner" name="Contact-header">
       <!-- Insert header information here -->
-        <h1>About Us</h1>
-        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
+        <h1>Contact Us</h1>
+        You can contact us anytime!!!
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="http://bit.ly/40or68S" alt="Card image">
+        <img class="card-img-top" src="http://bit.ly/3ZOI68g" alt="Email image">
         <div class="card-body">
-          <p class="title">Andrew Smith</p>
-          <p>Assistant Manager</p>
-          <p class="card-text">Handles the customers via the staff. Always tries to be available</p>
-          <p>smithan112@gamil.com</p>
+          <p class="title">Email</p>
+          <p>deal2cust@gamil.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="https://bit.ly/3IdWaly" alt="Card image">
+        <img class="card-img-top" src="http://bit.ly/45BOmUz" alt="Landline image">
         <div class="card-body">
-          <p class="title">Samuel Washington</p>
-          <p>Deputy Manager</p>
-          <p class="card-text">Handles the dealers. Many feedbacks are positive</p>
-          <p>washamuel@gamil.com</p>
+          <p class="title">Landline</p>
+          <p>+1 538 7892</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="https://bit.ly/4kZiRZp" alt="Card image">
+        <img class="card-img-top" src="https://shorturl.at/GWYO0" alt="Card image">
         <div class="card-body">
-          <p class="title">Elina Potts</p>
-          <p>Manager</p>
-          <p class="card-text">AM and DM report to him. Also caters for the need of the staff and workers</p>
-          <p>potlina@gamil.com</p>
+          <p class="title">Mobile</p>
+          <p>+1 880 635 7892</p>
         </div>
       </div>
     </div>
